<resources>
    <string name="app_name">"GeoQuiz "</string>
    <string name="true_button">Да</string>
    <string name="false_button">Нет</string>
    <string name="previous_button">Предыдущий</string>
    <string name="next_button">Следущий</string>
    <string name="correct_toast">Верно!</string>
    <string name="incorrect_toast">Не верно!</string>
    <string name="action_settings">Settings</string>
    <string
        name="question_sky">Небо синее?
    </string>
    <string
        name="question_shape_earth">Земля квадратная?
    </string>
    <string
        name="question_season">Зима в январе?
    </string>
    <string
        name="question_time">Восход с утра?
    </string>
    <string
        name="question_size_country">Россия самая маленькая страна?
    </string>
    <string name="warning_text">Вы уверены, что хотите сделать это?</string>
    <string name="show_answer_button">Показать ответ!</string>
    <string name="cheat_button">Ответ !</string>
    <string name="judgment_toast">Ответ просмотрен!</string>
    <string name="title_activity_cheat">Cheat</string>
</resources>
